--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
     "isomorphic-fetch": "^2.2.1",
+    "node-cron": "^2.0.3",
     "puppeteer": "^5.2.1"
   }
 }
